--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="name">StartTime</div>
             <div class="timePicker">
                 <div uib-timepicker ng-model="StartTimePick" show-meridian="ismeridian"></div>
-                <!--<pre class="alert alert-info">Time is: {{EndTimePick | date:'shortTime' }}</pre>-->
+                <!--<pre class="alert alert-info">Time is: {{EndTimePick.toLocaleTimeString() }}</pre>-->
             </div>
         </div>
 
